--- a/conf/nginx/web.conf
+++ b/conf/nginx/web.conf
@@ -7,7 +7,7 @@ server {
     listen [::]:80 default_server ipv6only=off;
     client_max_body_size 20m;
 
-    root        /var/www/webapp/src/web;
+    root        /var/www/webapp/src/public;
     index       index.php;
 
     location ~ /\. {
